[package]
description = "adsr envelopes from the surge synthesizer"
license = "GPL-3.0"
name = "surge-adsr"
version = "0.1.1-alpha.0"
authors = ["klebs <none>"]
edition = "2018"

[dependencies.surge-param]
path = "../surge-param"
version = "0.1.1-alpha.0"

[dependencies.surge-constants]
path = "../surge-constants"
version = "0.1.1-alpha.0"

[dependencies.surge-math]
path = "../surge-math"
version = "0.1.1-alpha.0"

[dependencies.surge-timeunit]
path = "../surge-timeunit"
version = "0.1.1-alpha.0"

[dependencies.surge-tables]
path = "../surge-tables"
version = "0.1.1-alpha.0"

[dependencies.surge-samplerate]
path = "../surge-samplerate"
version = "0.1.1-alpha.0"

[dependencies.surge-types]
path = "../surge-types"
version = "0.1.1-alpha.0"

[dependencies.surge-traits]
path = "../surge-traits"
version = "0.1.1-alpha.0"

[dependencies.surge-macros]
path = "../surge-macros"
version = "0.1.1-alpha.0"

[dependencies]
enhanced_enum = "*"
float-ord = "*"
paste = "*"