[package]
name = "surge-biquad"
version = "0.1.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "*"
float-ord = "*"

[dependencies.surge-math]
path = "../surge-math"

[dependencies.surge-constants]
path = "../surge-constants"

[dependencies.surge-lag]
path = "../surge-lag"

[dependencies.surge-tuning]
path = "../surge-tuning"

[dependencies.surge-tables]
path = "../surge-tables"

[dependencies.surge-samplerate]
path = "../surge-samplerate"

[dependencies.surge-traits]
path = "../surge-traits"
