[package]
name = "surge-biquad"
version = "0.1.1-alpha.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "*"
float-ord = "*"

[dependencies.surge-math]
path = "../surge-math"
version = "0.1.1-alpha.0"

[dependencies.surge-constants]
path = "../surge-constants"
version = "0.1.1-alpha.0"

[dependencies.surge-lag]
path = "../surge-lag"
version = "0.1.1-alpha.0"

[dependencies.surge-tuning]
path = "../surge-tuning"
version = "0.1.1-alpha.0"

[dependencies.surge-tables]
path = "../surge-tables"
version = "0.1.1-alpha.0"

[dependencies.surge-samplerate]
path = "../surge-samplerate"
version = "0.1.1-alpha.0"

[dependencies.surge-traits]
path = "../surge-traits"
version = "0.1.1-alpha.0"
