[package]
name = "surge-blitter"
version = "0.1.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.surge-samplerate]
path = "../surge-samplerate"

[dependencies.surge-constants]
path = "../surge-constants"

[dependencies.surge-math]
path = "../surge-math"

[dependencies]
ndarray = "*"
