[package]
name = "surge-coeffmaker"
version = "0.1.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-ord = "*"
enhanced_enum = "*"

[dependencies.surge-constants]
path = "../surge-constants"

[dependencies.surge-math]
path = "../surge-math"

[dependencies.surge-tables]
path = "../surge-tables"

[dependencies.surge-tuning]
path = "../surge-tuning"

[dependencies.surge-samplerate]
path = "../surge-samplerate"

[dependencies.surge-filter]
path = "../surge-filter"

[dependencies.surge-traits]
path = "../surge-traits"

[dependencies.surge-types]
path = "../surge-types"
