[package]
name = "surge-filter"
version = "0.1.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.surge-qfunit]
path = "../surge-qfunit"

[dependencies.surge-param]
path = "../surge-param"

[dependencies.surge-constants]
path = "../surge-constants"

[dependencies.surge-macros]
path = "../surge-macros"

[dependencies]
enhanced_enum = "*"
paste = "*"
