[package]
name = "surge-filter"
version = "0.1.1-alpha.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.surge-qfunit]
path = "../surge-qfunit"
version = "0.1.1-alpha.0"

[dependencies.surge-param]
path = "../surge-param"
version = "0.1.1-alpha.0"

[dependencies.surge-constants]
path = "../surge-constants"
version = "0.1.1-alpha.0"

[dependencies.surge-macros]
path = "../surge-macros"
version = "0.1.1-alpha.0"

[dependencies]
enhanced_enum = "*"
paste = "*"
