[package]

name = "surge-hound"
version = "0.2.11-alpha.0" #from upstream hound 3.4.0
repository = "https://github.com/klebz/surge-rs"
authors = [ 
"klebs <none>",
"Ruud van Asseldonk <dev@veniogames.com>"
]
description = "A wav encoding and decoding library -- modified for use with surge-synthesizer"
keywords = ["wav", "wave", "audio", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]
license = "Apache-2.0"
readme = "readme.md"
homepage = "https://github.com/ruuda/hound"
documentation = "https://docs.rs/hound"

[dev-dependencies]
# An older version of cpal, but newer versions depend on the futures library,
# which is incompatible with the version of Rust that Hound guarantees to
# support.
cpal = "0.2.12"
