[package]
name = "surge-lipol"
version = "0.1.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "*"

[dependencies.surge-math]
path = "../surge-math"

[dependencies.surge-constants]
path = "../surge-constants"
