[package]
name = "surge-midi"
version = "0.1.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.surge-constants]
path = "../surge-constants"

[dependencies.surge-types]
path = "../surge-types"

[dependencies.surge-macros]
path = "../surge-macros"

[dependencies.surge-quadrosc]
path = "../surge-quadrosc"
