[package]
description = "surge synthesizer -- midi handling"
license = "GPL-3.0"
name = "surge-midi"
version = "0.1.1-alpha.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.surge-constants]
path = "../surge-constants"
version = "0.1.1-alpha.0"

[dependencies.surge-types]
path = "../surge-types"
version = "0.1.1-alpha.0"

[dependencies.surge-macros]
path = "../surge-macros"
version = "0.1.1-alpha.0"

[dependencies.surge-quadrosc]
path = "../surge-quadrosc"
version = "0.1.1-alpha.0"