[package]
name = "surge-modulation"
version = "0.1.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "*"
enhanced_enum = "*"

[dependencies.surge-constants]
path = "../surge-constants"
version = "0.1.0"

[dependencies.surge-samplerate]
path = "../surge-samplerate"
version = "0.1.0"

[dependencies.surge-adsr]
path = "../surge-adsr"
version = "0.1.0"

[dependencies.surge-lfo]
path = "../surge-lfo"
version = "0.1.0"

[dependencies.surge-traits]
path = "../surge-traits"
version = "0.1.0"

[dependencies.surge-macros]
path = "../surge-macros"
version = "0.1.0"

[dependencies.surge-types]
path = "../surge-types"
version = "0.1.0"

[dependencies.surge-param]
path = "../surge-param"
version = "0.1.0"
