[package]
name = "surge-param"
version = "0.1.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enhanced_enum = "*"
bitflags = "*"

[dependencies.surge-math]
path = "../surge-math"
version = "0.1.0"

[dependencies.surge-constants]
path = "../surge-constants"
version = "0.1.0"
