[package]
name = "surge-qfunit"
version = "0.1.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.surge-constants]
path = "../surge-constants"

[dependencies.surge-param]
path = "../surge-param"

[dependencies.surge-math]
path = "../surge-math"

[dependencies.surge-tables]
path = "../surge-tables"

[dependencies.surge-types]
path = "../surge-types"

[dependencies.surge-traits]
path = "../surge-traits"

[dependencies]
enhanced_enum = "*"
