[package]
description = "surge synthesizer -- quad filter unit used for voice processing"
license = "GPL-3.0"
name = "surge-qfunit"
version = "0.1.1-alpha.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.surge-constants]
path = "../surge-constants"
version = "0.1.1-alpha.0"

[dependencies.surge-param]
path = "../surge-param"
version = "0.1.1-alpha.0"

[dependencies.surge-math]
path = "../surge-math"
version = "0.1.1-alpha.0"

[dependencies.surge-tables]
path = "../surge-tables"
version = "0.1.1-alpha.0"

[dependencies.surge-types]
path = "../surge-types"
version = "0.1.1-alpha.0"

[dependencies.surge-traits]
path = "../surge-traits"
version = "0.1.1-alpha.0"

[dependencies]
enhanced_enum = "*"