[package]
description = "surge synthesizer -- simple single frequency oscillator computation"
license = "GPL-3.0"
name = "surge-quadrosc"
version = "0.1.1-alpha.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]