[package]
name = "surge-samplerate"
version = "0.1.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_float = "*"

[dependencies.surge-constants]
path = "../surge-constants"
version = "0.1.0"
